KIN-323 fixes center alignment

--- a/src/screens/chart-notes/chart-notes-details/ChartNotesDetailsScreen.scss
+++ b/src/screens/chart-notes/chart-notes-details/ChartNotesDetailsScreen.scss
@@ -44,4 +44,19 @@
       color: #FA9C2F;
     }
   }
+  .client-details-tab-wrapper {
+    .t-cell-body_side {
+      text-align: center !important;
+    }
+    .t-cell-status {
+      text-align: center !important;
+    }
+    .t-cell-last_provider {
+      text-align: center !important;
+    }
+    .t-cell-status {
+      text-align: center !important;
+    }
+
+  }
 }
